--- a/src/App.scss
+++ b/src/App.scss
@@ -84,26 +84,50 @@
       grid-template-columns: repeat(9, minmax(0px, 1fr));
       gap: 4px;
       padding: 16px 0px;
+
+      position: relative;
+
       &:hover {
         background-color: #efedff7d;
         .spectrum-region {
-          transform: translateX(2px);
+          // transform: translateX(2px);
           background-color: #ccc8ff;
+          .text-wrap {
+            // left: calc(100% + 8px);
+            transform: translateX(2px) translateY(-50%);
+            .tech-name {
+              white-space: unset;
+              width: max-content;
+            }
+          }
         }
       }
       .spectrum-region {
         background-color: #3c2eff24;
         border-radius: 4px;
-        position: relative;
-        padding: 12px;
+
+        // position: relative;
+
+        padding: 12px 4px 12px 12px;
         min-height: 64px;
         box-sizing: border-box;
-        display: flex;
-        flex-direction: column;
-        gap: 4px;
-        text-align: left;
         cursor: pointer;
         transition: 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+        display: flex;
+        align-items: center;
+        .text-wrap {
+          display: flex;
+          flex-direction: column;
+          gap: 4px;
+          text-align: left;
+          transition: 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+          width: 100%;
+          position: absolute;
+          top: 50%;
+          left: 12px;
+          transform: translateY(-50%);
+        }
+
         .sys-type {
           font-size: 12px;
           color: #3c2effce;
@@ -111,8 +135,11 @@
         .tech-name {
           color: #3c2eff;
           font-weight: 500;
-          width: max-content;
+          // width: max-content;
           text-overflow: ellipsis;
+          white-space: nowrap;
+          overflow: hidden;
+          width: 100%;
         }
       }
     }
