--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,4 @@
 .App {
-  text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -166,5 +165,106 @@
 
     }
   }
+}
 
+.assessment-container {
+  display: flex;
+  flex-direction: row;
+  min-height: 100vh;
+  width: 100%;
+  .assessment-sidebar {
+    width: 348px;
+    background-color: #09005C;
+    display: flex;
+    flex-direction: column;
+    color: white;
+    padding: 24px;
+    gap: 12px;
+    transition: 0.4s cubic-bezier(0.075, 0.82, 0.165, 1);
+    overflow: hidden;
+    box-sizing: border-box;
+    &.hide {
+      width: 0px;
+      padding: 24px 0px;
+    }
+  }
+  .assessment-main {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    background-color: #f2f2f2;
+    padding: 24px;
+  }
+}
+
+.sections-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+  gap: 12px;
+  margin-top: 16px;
+  position: relative;
+  // &.question-grid {
+  //   grid-template-columns: 1fr;
+  // }
+}
+
+.section-card {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  padding: 16px;
+  border-radius: 12px;
+  background-color: white;
+  cursor: pointer;
+  transition: 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+  &:hover {
+    transform: translateY(-3px);
+    box-shadow: 0px 4px 12px rgba(0,0,0,0.04);
+  }
+  .label {
+    color: #3c2eff;
+    font-weight: 600;
+    font-size: 14px;
+  }
+  .title {
+    color: #1F1C1A;
+    font-size: 18px;
+    font-weight: 500;
+  }
+  .status {
+    color: #1F1C1A;
+    font-size: 16px;
+    font-weight: 400;
+    opacity: .7;
+    &.completed {
+      color: #00A76B;
+    }
+  }
+}
+
+.question-card-container {
+  display: flex;
+  flex-direction: column;
+  padding: 24px;
+  padding-bottom: 32px;
+  border-radius: 12px;
+  height: 540px;
+  align-items: center;
+  background-color: white;
+  overflow: hidden;
+  transition: 0.6s cubic-bezier(0.075, 0.82, 0.165, 1);
+  position: absolute;
+  left: 0;
+  width: 100%;
+  transform-origin: left top;
+  // transform: translateX(0%);
+  box-sizing: border-box;
+  &.hide-card {
+    // transform: scale(0) translateX(0%);
+    transform: scale(0);
+  }
+  &.display-card {
+    // transform: scale(1) translateX(0%);
+    transform: scale(1);
+  }
 }
