--- a/src/App.scss
+++ b/src/App.scss
@@ -180,7 +180,7 @@
     color: white;
     padding: 24px;
     gap: 12px;
-    transition: 0.4s cubic-bezier(0.075, 0.82, 0.165, 1);
+    transition: 0.4s cubic-bezier(0.075, 0.82, 0.165, 1) .3s;
     overflow: hidden;
     box-sizing: border-box;
     &.hide {
@@ -252,7 +252,8 @@
   align-items: center;
   background-color: white;
   overflow: hidden;
-  transition: 0.6s cubic-bezier(0.075, 0.82, 0.165, 1);
+  // transition: 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+  transition: transform .4s ease-in-out;
   position: absolute;
   left: 0;
   width: 100%;
