--- a/src/App.scss
+++ b/src/App.scss
@@ -120,7 +120,7 @@
           gap: 4px;
           text-align: left;
           transition: 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
-          width: 100%;
+          width: calc(100% - 24px);
           position: absolute;
           top: 50%;
           left: 12px;
