--- a/src/App.scss
+++ b/src/App.scss
@@ -371,3 +371,83 @@
     }
   }
 }
+
+.chart-container {
+  display: flex;
+  flex-direction: column;
+  border-radius: 12px;
+  background-color: white;
+  padding: 16px;
+  width: 440px;
+  gap: 12px;
+  .title {
+    font-size: 16px;
+    font-weight: 500;
+    color: #1F1C1A;
+  }
+  .separator {
+    display: flex;
+    width: 100%;
+    height: 1px;
+    background-color: #e1e1e1;
+  }
+  .domain-box {
+    display: flex;
+    flex-direction: column;
+    background-color: #f5f5f5;
+    border-radius: 8px;
+    padding: 8px;
+    .header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 4px;
+    }
+    .chart-wrap {
+      display: flex;
+      flex-direction: column;
+      position: relative;
+      padding: 12px 0px;
+      gap: 16px;
+      .use-row {
+        display: grid;
+        grid-template-columns: repeat(10, minmax(0px, 1fr));
+        gap: 4px;
+        z-index: 2;
+      }
+      .score-bar {
+        display: flex;
+        position: relative;
+        border-radius: 4px;
+        height: 24px;
+      }
+      .score-number {
+        grid-column: 10;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+    }
+    .chart-backdrop {
+      display: grid;
+      grid-template-columns: repeat(10, minmax(0px, 1fr));
+      gap: 4px;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      .bg-col {
+        border-radius: 8px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #f0f0f0;
+        &:last-child {
+          background-color: white;
+        }
+      }
+    }
+  }
+}
